fix error in Edit ValutCash. someone update in view ok terminals details

--- a/OctagonPlatform/Views/Terminals/Sections/Documents.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/Documents.cshtml
@@ -1,6 +1,6 @@
 ﻿@model OctagonPlatform.Models.FormsViewModels.TerminalDocumentsVM
 
-<div>
+<div style="margin: 20px;">
     @using (Html.BeginForm("SetDocuments", "Terminals", FormMethod.Post,
                                                   new { enctype = "multipart/form-data" }))
     {
