--- a/OctagonPlatform/Views/Terminals/Sections/Notes.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/Notes.cshtml
@@ -1,6 +1,6 @@
 ﻿@model OctagonPlatform.Models.FormsViewModels.TerminalNotesVM
 
-    <div>
+    <div style="margin: 20px;">
         <table>
             <thead>
                 <tr>
