--- a/OctagonPlatform/Views/VaultCash/Modal/AddVaultCash.cshtml
+++ b/OctagonPlatform/Views/VaultCash/Modal/AddVaultCash.cshtml
@@ -4,8 +4,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Modal Header</h4>
-                <h3 class="alert-info">Add Vaultcash</h3>
+                <h4 class="modal-title">Vault Cash</h4>
                 @Html.Partial("VaultCashForm")
             </div>
         </div>
