--- a/OctagonPlatform/Views/Octagon/Cryptoxone.cshtml
+++ b/OctagonPlatform/Views/Octagon/Cryptoxone.cshtml
@@ -117,6 +117,44 @@
 
                         </ul>
                     </div>
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-primary btn-xs dropdown-toggle" data-toggle="dropdown">
+                            Terminals
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu pull-right" role="menu">
+                            <li>
+                                <a href="#">Terminal 1</a>
+                            </li>
+                            <li>
+                                <a href="#">Terminal 2</a>
+                            </li>
+                            <li>
+                                <a href="#">Terminal 3</a>
+                            </li>
+                            <li>
+                                <a href="#">Terminal 4</a>
+                            </li>
+                            <li>
+                                <a href="#">Terminal 5</a>
+                            </li>
+                            <li>
+                                <a href="#">Terminal 6</a>
+                            </li>
+                            <li>
+                                <a href="#">Terminal 7</a>
+                            </li>
+                            <li>
+                                <a href="#">Terminal 8</a>
+                            </li>
+                            <li>
+                                <a href="#">Terminal 9</a>
+                            </li>
+                            <li>
+                                <a href="#">Terminal 10</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
             <div class="panel-body">
