--- a/OctagonPlatform/Views/Shared/Sections/OctagonSidebar.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/OctagonSidebar.cshtml
@@ -21,12 +21,12 @@
                 </li>
                 <li>
                     <a href="@Url.Action("BeComm", "Octagon", new { logo = ViewBag.Logo, businessName = ViewBag.BusinessName })">
-                         BeComm
+                         BECOMM
                     </a>
                 </li>
                 <li>
                     <a href="@Url.Action("CryptoXone", "Octagon", new { logo = ViewBag.Logo, businessName = ViewBag.BusinessName })">
-                         CryptoXone
+                         CRYPTOXONE
                     </a>
                 </li>
                 <li>
@@ -36,7 +36,7 @@
                 </li>
                 <li>
                     <a href="@Url.Action("DemMoney", "Octagon", new { logo = ViewBag.Logo, businessName = ViewBag.BusinessName })">
-                         DemMoney
+                         DEMMONEY
                     </a>
                 </li>
                 <li>
@@ -46,7 +46,7 @@
                 </li>
                 <li>
                     <a href="@Url.Action("VendBot", "Octagon", new { logo = ViewBag.Logo, businessName = ViewBag.BusinessName })">
-                         VendBot
+                         VENDBOT
                     </a>
                 </li>
                 <li>
