fix error in surcharge

--- a/OctagonPlatform/Views/Surcharge/Modal/AddSurCharge.cshtml
+++ b/OctagonPlatform/Views/Surcharge/Modal/AddSurCharge.cshtml
@@ -4,8 +4,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Modal Header</h4>
-                <h3 class="alert-info">Add Surcharge</h3>
+                <h4 class="modal-title">Surcharge</h4>
                 @Html.Partial("SurchargeForm")
             </div>
         </div>
