Finished AMS and AMS Dashboard

--- a/OctagonPlatform/Views/Dashboard/Index.cshtml
+++ b/OctagonPlatform/Views/Dashboard/Index.cshtml
@@ -37,7 +37,7 @@
                 </div>
             </div>
             <div class="panel-body">
-                <div id="transactions-chart"></div>
+                <div id="dashboard-transactions-chart"></div>
             </div>
         </div>
     </div>
@@ -69,9 +69,78 @@
                 </div>
             </div>
             <div class="panel-body">
-                <div id="cash-load-chart"></div>
+                <div id="dashboard-cash-load-chart"></div>
             </div>
         </div>
     </div>
     <!-- END CASH LOADS -->
+</div>
+<div class="row">
+    <!-- SURCHARGES -->
+    <div class="col-lg-6">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <i class="fa fa-bar-chart-o fa-fw"></i> Surcharges
+                <div class="pull-right">
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-primary btn-xs dropdown-toggle" data-toggle="dropdown">
+                            Period
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu pull-right" role="menu">
+                            <li>
+                                <a href="#">Daily</a>
+                            </li>
+                            <li>
+                                <a href="#">Weekly</a>
+                            </li>
+                            <li>
+                                <a href="#">Monthly</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="panel-body">
+                <div id="dashboard-surcharges-chart"></div>
+            </div>
+        </div>
+    </div>
+    <!-- END SURCHARGES -->
+    <!--/////////////////////////////-->
+    <!-- INTERXCHANGE -->
+    <div class="col-lg-6">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <i class="fa fa-bar-chart-o fa-fw"></i> InterXchange
+                <div class="pull-right">
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-primary btn-xs dropdown-toggle" data-toggle="dropdown">
+                            Period
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu pull-right" role="menu">
+                            <li>
+                                <a href="#">Daily</a>
+                            </li>
+                            <li>
+                                <a href="#">Weekly</a>
+                            </li>
+                            <li>
+                                <a href="#">Monthly</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="panel-body">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div id="dashboard-interxchange-chart"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- END INTERXCHANGE -->
 </div>
