fiw error in interchage

--- a/OctagonPlatform/Views/Terminals/Sections/Interchanges.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/Interchanges.cshtml
@@ -9,7 +9,7 @@
     }
 }
 <p>
-    @Ajax.ActionLink("ADD", "Create", "InterChange", new { Model },
+    @Ajax.ActionLink("ADD", "Create", "InterChange", new { id = Model.Id },
                    new AjaxOptions
                    {
                        UpdateTargetId = "AddInterchange",
