--- a/OctagonPlatform/Views/Terminals/Details.cshtml
+++ b/OctagonPlatform/Views/Terminals/Details.cshtml
@@ -356,7 +356,7 @@
                         <i class="fa fa-bank" style="font-size:25px;color:#4776a1"></i>
                         <a data-toggle="collapse" href="#getBindKey">Get Bind Key</a>
                     </h3>
-                    @Ajax.ActionLink("Bind Key", "GetKey", "Terminals", new { terminalId = Model.TerminalId },
+                    @*@Ajax.ActionLink("Bind Key", "GetKey", "Terminals", new { terminalId = Model.TerminalId },
                    new AjaxOptions
                    {
                        UpdateTargetId = "getBindKey",
@@ -369,9 +369,9 @@
                        @class = "link",
                        data_toggle = "collapse",
                        data_target = "#getBindKey"
-                   })
+                   })*@
                     <div id="getBindKey" class="panel-collapse collapse">
-                        <div class="loader"></div>
+                        @*<div class="loader"></div>*@
                     </div>
                 </div>
             </div>
