--- a/OctagonPlatform/Views/Octagon/AVT.cshtml
+++ b/OctagonPlatform/Views/Octagon/AVT.cshtml
@@ -310,6 +310,7 @@
                 { y: 'Ontario', a: 1600 },
                 { y: 'Seatle', a: 900 }
             ],
+            xLabelAngle: 35,
             xkey: 'y',
             ykeys: ['a'],
             labels: ['Amount'],
