--- a/OctagonPlatform/Views/Home/Index.cshtml
+++ b/OctagonPlatform/Views/Home/Index.cshtml
@@ -85,27 +85,27 @@ Layout = "~/Views/Shared/_LayoutOctagon.cshtml";
     <div class="jumbotron">
         <h1 style="color:rgb(120, 214, 249);">OCTAGON </h1>
         <p style="font-family:Helvetica, 'Helvetica Neue'">The whole world in your hands</p>
-        <p></p><a class="btn btn-default" role="button" href="#">Learn more</a>
+        
     </div>
 </div>
 <hr>
-<div class="container site-section" style="padding-bottom: 20px;" id="middle">
+<div class="container site-section" style="padding-bottom: 20px; padding-left:0; padding-right:0;" id="middle">
     <div class="row">
         <div class="col-md-4">
-            <a href="">
+            <a>
                 <img src="~/Octagon/assets/img/1.jpg" id="team" style="width: 100%;"> 
                 <!--<h2 style="color:rgb(129,124,124);">TEAM</h2> <p>&nbsp;</p>-->
             </a>
         </div>
 
         <div class="col-md-4">
-            <a href="">
+            <a> 
                 <img src="~/Octagon/assets/img/2.jpg" id="vision" style="width: 100%;">
                 <!--<h2 style="color:rgb(129,124,124);">VISION</h2> <p>&nbsp;</p>-->
             </a>
         </div>
         <div class="col-md-4">
-            <a href="">
+            <a>
                 <img src="~/Octagon/assets/img/3.jpg" id="innovation" style="width: 100%;"> 
                 <!--<h2 style="color:rgb(129,124,124);">INNOVATION</h2> <p>&nbsp;</p>-->
             </a>
@@ -115,7 +115,7 @@ Layout = "~/Views/Shared/_LayoutOctagon.cshtml";
 
 <div class="container-fluid" id="container-fluid">
     <div >
-        <img src="~/Octagon/assets/img/banner2.jpg" style="width: 100%;"/> 
+        <img src="~/Octagon/assets/img/banner2-1.jpg" style="width: 100%;"/> 
     </div>
 
     <br>
