--- a/OctagonPlatform/Views/Shared/Sections/Scripts.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/Scripts.cshtml
@@ -1,5 +1,4 @@
-﻿
-  <!-- /#wrapper -->
+﻿<!-- /#wrapper -->
 
 
 
@@ -17,9 +16,10 @@
 
 @Scripts.Render("~/Octagon/assets/vendor/raphael/raphael.min.js")
 @Scripts.Render("~/Octagon/assets/vendor/morrisjs/morris.min.js")
+@Scripts.Render("~/Octagon/assets/data/AMS-Dashboard-data.js")
 @Scripts.Render("~/Octagon/assets/data/AMS-data.js")
 @Scripts.Render("~/Octagon/assets/data/demmoney-data.js")
-@Scripts.Render("~/Octagon/assets/data/AMS-Dashboard-data.js")
+@Scripts.Render("~/Octagon/assets/data/CashEverywhere-data.js")
 @Scripts.Render("~/Octagon/assets/vendor/dist/js/sb-admin-2.js")
 
 @Scripts.Render("~/bundles/jqueryui")
